tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_visibility__private_mod.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - "visibility::private_mod"
---
success: true
exit_code: 0
----- stdout -----
crate::nesting::level1::level2::level3

----- stderr -----
