tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_visibility__pub_crate_mod.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - "visibility::pub_crate_mod"
---
success: true
exit_code: 0
----- stdout -----
crate::visibility::pub_mod::greet

----- stderr -----
