tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_visibility__pub_super_mod.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - "visibility::pub_super_mod"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module::greet

----- stderr -----
